content/consul/v1.10.x/content/commands/intention/delete.mdx
---
# Copyright (c) 2024 HashiCorp, Inc.
# Consul and the Consul logo are trademarks of HashiCorp.
#
# Documentation licensed under the Business Source License, Version 1.1.
# The original work was translated from English into Brazilian Portuguese.
# https://github.com/hashicorp/consul/blob/-/LICENSE

layout: commands
page_title: 'Commands: Intention Delete'
---

# Consul Intention Delete

Command: `consul intention delete`

The `intention delete` command deletes a matching intention.

-> **Deprecated** - The one argument form of this command is deprecated in
Consul 1.9.0. Intentions no longer need IDs when represented as
[`service-intentions`](/docs/connect/config-entries/service-intentions) config
entries.

## Usage

Usage:

- `consul intention delete [options] SRC DST`
- `consul intention delete [options] ID`

`SRC` and `DST` can both take [several forms](/commands/intention#source-and-destination-naming).

#### API Options

@include 'http_api_options_client.mdx'

#### Enterprise Options

@include 'http_api_namespace_options.mdx'

## Examples

Delete an intention from "web" to "db" with any action:

```shell-session
$ consul intention delete web db
```

Delete an intention by unique ID:

```shell-session
$ consul intention delete 4ffed935-439c-695d-4f51-f4fc0b12a7a7
```
